# CatacombsOfTime

./: README.md  main.py  pyproject.toml  stats.prof  stats2.prof
data/assets/images/: config.json
data/game_data/battles/: test.json
data/modules/base/: constants.py  profiler.py  tests.py  utils.py
data/modules/base/registry/: loader.py  registrable.py  registry.py  registry_data.py  sprite_data.py
data/modules/editor/: editor_selection_info.py  shared_editor_state.py
data/modules/editor/actions/: editor_actions.py  object_actions.py  tile_actions.py
data/modules/editor/editor_states/: editor_state.py  object_draw_state.py  object_selection_state.py  tile_draw_state.py  tile_selection_state.py
data/modules/editor/screens/: object_selection_screen.py  sprite_sheet_screen.py
data/modules/editor/tools/: editor_tool.py
data/modules/editor/tools/object_tools/: object_draw_tool.py
data/modules/editor/tools/tile_tools/: tile_draw_tool.py  tile_fill_tool.py
data/modules/entities/: entity.py  entity_manager.py  entity_spawn.py  player.py
data/modules/entities/attacks/: explosion.py  fireball.py  sword_swing.py
data/modules/entities/components/: box_collider.py  circle_collider.py  health.py  interaction_controller.py  item_slot.py  line_collider.py  movement.py
data/modules/entities/enemies/: enemy.py  enemy_loader.py  melee_enemy.py
data/modules/entities/items/: energy_sword.py  item.py
data/modules/entities/models/: character_model.py  humanoid_model.py  model_loader.py  model_part.py
data/modules/entities/states/: entity_state_manager.py  melee_attack_state.py  stunned_state.py  wander_state.py
data/modules/game_states/: editor.py  editor_room_selection.py  game.py  lobby.py  main_menu.py  test_state.py
data/modules/level/: battle.py  enemy_wave.py  level.py  room.py  tile.py
data/modules/magic/: __init__.py  rune.py  runic_pattern.py  runic_sequence.py  spell.py
data/modules/objects/: altars.py  object_loader.py  object_manager.py  torch.py
data/modules/objects/base/: game_object.py  game_object_data.py
data/modules/ui/: minimap.py
