[project]
name = "catacombs-of-time"
version = "0.1.0"
description = "A game about a mage battling through dungeons"
requires-python = ">=3.14"
dependencies = [
    "pygame-ce>=2.5.6",
    "pygbase-engine",
    "typing-extensions"
]

[tool.uv.sources]
pygbase-engine = { path = "../pygbase", editable = true }
